useDarkMode - useDarkMode hook - helps toggle between dark mode and light mode - stores preferred theme in browser local storage to prevent change on theme on refresh - useMediaQuery and useLocalStorage are dependecy hooks

--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,9 @@
   background-color: #333333;
   color: #ffffff;
 }
+body.darkmode{
+  background-color: #555555;
+}
 button{
   background-color: blue;
   border: none;
